--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.0.1",
   "description": "Dub Better Auth Plugin",
   "scripts": {
-    "build": "unbuild"
+    "build": "unbuild",
+    "publish": "pnpm run build && npm publish"
   },
   "main": "./dist/index.cjs",
   "module": "./dist/index.mjs",
@@ -31,5 +32,8 @@
       "import": "./dist/index.mjs"
     },
     "./types": "./dist/index.d.mts"
+  },
+  "publishConfig": {
+    "access": "public"
   }
 }
