--- a/package.json
+++ b/package.json
@@ -1,38 +1,40 @@
 {
-  "name": "@dub/better-auth",
-  "version": "0.0.1",
-  "description": "Dub Better Auth Plugin",
-  "scripts": {
-    "build": "unbuild"
-  },
-  "main": "./dist/index.cjs",
-  "module": "./dist/index.mjs",
-  "types": "./dist/index.d.mts",
-  "keywords": [
-    "dub",
-    "better-auth",
-    "dub-better-auth",
-    "dub-plugin",
-    "dub-better-auth-plugin",
-    "dub-better-auth-plugin"
-  ],
-  "files": [
-    "dist"
-  ],
-  "devDependencies": {
-    "typescript": "^5.5.4",
-    "better-auth": "^1.2.7",
-    "dub": "^0.61.8",
-    "unbuild": "^3.5.0"
-  },
-  "exports": {
-    ".": {
-      "require": "./dist/index.cjs",
-      "import": "./dist/index.mjs"
-    },
-    "./types": "./dist/index.d.mts"
-  },
-  "publishConfig": {
-    "access": "public"
-  }
+	"name": "@dub/better-auth",
+	"version": "0.0.1",
+	"description": "Dub Better Auth Plugin",
+	"scripts": {
+		"build": "unbuild"
+	},
+	"main": "./dist/index.cjs",
+	"module": "./dist/index.mjs",
+	"types": "./dist/index.d.mts",
+	"keywords": [
+		"dub",
+		"better-auth",
+		"dub-better-auth",
+		"dub-plugin",
+		"dub-better-auth-plugin",
+		"dub-better-auth-plugin"
+	],
+	"files": ["dist"],
+	"devDependencies": {
+		"better-auth": "^1.2.7",
+		"dub": "^0.61.8",
+		"typescript": "^5.5.4",
+		"unbuild": "^3.5.0",
+		"vitest": "^3.1.3"
+	},
+	"exports": {
+		".": {
+			"require": "./dist/index.cjs",
+			"import": "./dist/index.mjs"
+		},
+		"./types": "./dist/index.d.mts"
+	},
+	"publishConfig": {
+		"access": "public"
+	},
+	"dependencies": {
+		"zod": "^3.24.4"
+	}
 }
